--- a/live(0.0.0.2)/index.html
+++ b/live(0.0.0.2)/index.html
@@ -4,7 +4,7 @@
 	<title>!!FREE MONEY!!</title>
 	<link rel="icon" type="image/ico" href="./css/img.jpg" />
 	<link rel="stylesheet" href="./css/style.css">
-	<meta charset="utf-8" name="view-port" content="width=device-width,initial-scale=1">
+	<meta name="view-port" content="width=device-width,initial-scale=1">
 </head>
 <body>
 	<header>
