--- a/live(0.0.0.2)/index_php.html
+++ b/live(0.0.0.2)/index_php.html
@@ -1,1 +1,48 @@
+<!--php-->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>!!FREE MONEY!!</title>
+	
+	<link rel="stylesheet" href="./css/style.css">
+	<meta charset="utf-8">
+	<meta name="view-port" content="width=device-width,initial-scale=1">
+</head>
+<body>
+	<header>
+		UniKart
+	</header>
+	<input type="checkbox"/>
+	<nav id="burger">	
 
+		<a id="bar1"></a>
+		<a id="bar2"></a>
+		<a id="bar3"></a>
+
+	</nav>
+	<div id="menu">
+		<a href="https://youtube.com" id="menubutton"><div id="menutext">Home</div></a>
+		<br>
+		<a href="https://youtube.com" id="menubutton"><div id="menutext">Contact us</div></a>
+		<br>
+		<a href="https://youtube.com" id="menubutton"><div id="menutext">About</div></a>
+		<br>
+		<a href="https://youtube.com" id="menubutton"><div id="menutext">Feedback</div></a>
+		<br>
+		
+
+		
+	</div>
+	<a href="https://youtube.com" id="button"><div id="text">Baby products</div></a>
+	<br>
+	<a href="https://youtube.com" id="button"><div id="text">Computer parts</div></a>
+	<br>
+	<a href="https://youtube.com" id="button"><div id="text">grocery</div></a>
+	<br>
+	<a href="https://youtube.com" id="button"><div id="text">Smartphones</div></a>
+	<br>
+
+
+
+</body>
+</html>
